--- a/STSEval/app/templates/app/scoreboard.html
+++ b/STSEval/app/templates/app/scoreboard.html
@@ -221,6 +221,7 @@
         $("#LockBlackout").hide();
         $("#DetailsArea").hide();
         $("#DetailsArea").empty();
+        clearInterval(RedLineInterval);
 
     }
 
