--- a/STSEval/account/templates/account/login.html
+++ b/STSEval/account/templates/account/login.html
@@ -1,5 +1,5 @@
 {% extends 'app/layout.html' %}
-
+{% load static %}
 {% block content %}
 <div class="d-flex justify-content-center">
     <div><h2>Login</h2>
@@ -30,4 +30,7 @@
     <br/>
     </div>
 </div>
+{% endblock %}
+{% block scripts %}
+    <script src="{% static 'app/scripts/check_browser.js' %}"></script>
 {% endblock %}
