--- a/STSEval/account/templates/account/login_simple.html
+++ b/STSEval/account/templates/account/login_simple.html
@@ -30,5 +30,5 @@
 </div>
 {% endblock %}
 {% block scripts %}
-    <script src="{% static 'app/scripts/check_browser.js' %}"></script>
+    <script src="{% static 'app/scripts/check_browser.js' %}?v=1"></script>
 {% endblock %}
