--- a/STSEval/app/templates/app/athlete_start_list_admin.html
+++ b/STSEval/app/templates/app/athlete_start_list_admin.html
@@ -6,7 +6,7 @@
                 <td><a href="" onclick="ShowStartList({{sl.id}})" data-toggle="modal" data-target="#modalSecond"><i class="fa fa-exchange fa-rotate-90"></i></a>
                 &nbsp; &nbsp;
                 </td>
-			    <td id="divSL{{sl.id}}" class="{% if not sl.active %}start-list-scratched{% endif %}">{{sl.athlete.team.abbreviation}} - {{sl.athlete.level.name}} - {{sl.athlete.name}} - {{sl.athlete.rotation}}</td>
+			    <td id="divSL{{sl.id}}" class="pr-1 {% if not sl.active %}start-list-scratched{% endif %}">{{sl.athlete.team.abbreviation}} - {{sl.athlete.level.name}} - {{sl.athlete.name}} - {{sl.athlete.rotation}}</td>
 		    </tr>
         {% endfor %} 
          <input type="hidden" id="hdnTopPosition" value="divSL{{first_not_completed}}"/>
