--- a/STSEval/app/static/app/content/site.css
+++ b/STSEval/app/static/app/content/site.css
@@ -452,3 +452,9 @@ input[type="checkbox"].input-validation-error {
     height:200px;
     max-width: 100%
 }
+
+.chat-container {
+    position:fixed;
+    bottom:3px;
+    right:10px;
+}
