--- a/STSEval/app/templates/app/d1.html
+++ b/STSEval/app/templates/app/d1.html
@@ -3,6 +3,7 @@
 {% block content %}
 {% load staticfiles %}
 {% include "app/dot_change.html" %}
+{% include "chat/chat.html" %}
 <div id="AccountabilityReportBlackOut" style="width:100%;height:100%;background-color:#000000;opacity: .3;position:fixed;z-index:103;display:none" onclick="CloseAccountabilityReport()"></div>
 <div id="divAccountabilityReport" style="position:absolute;z-index:104;text-align:center;padding:5px;overflow:auto;display:none;background-color:rgb(97, 97, 106);color:white;top:10%;left:35%;width:40%"  class="rounded"></div>
 <div align="center">
@@ -259,6 +260,8 @@
             CheckJudges(doc);
             CheckStream(doc);
         });
+        SetupChatListener();
+        
     }
     else {
         EditableDots = false;
