--- a/STSEval/app/static/app/content/chat.css
+++ b/STSEval/app/static/app/content/chat.css
@@ -7,9 +7,9 @@
 
 .chat-box {
     background-color: #373747;
-    border-radius: .3rem;
+    border-radius: .4rem;
     font-size: .8rem;
-    min-width: 300px;
+    width: 300px;
     border: 1px solid black;
 }
 
@@ -24,26 +24,49 @@
 .chat-messages{
     padding-left:.5rem;
     padding-right:.5rem;
-    min-height:150px;
+    min-height:200px;
+    max-height:200px;
+    overflow-x:auto;
 }
 
 .chat-message-name {
     color: #9292aa;
+    display:flex;
 }
 
 .chat-x {
     background-color: #373747;
+    position: absolute;
+    right: 5px;
+    width: 20px;
+    height: 20px;
+    padding: 0px 0px 0px 0px !important;
+    border-radius: 1rem !important;
+    text-align: center;
+    line-height: 1.2;
+    background-color: #45455b;
+    color:white;
 }
 
 .chat-dropdown {
     background-color:#45455b ;
+    color:white;
+    padding: .1rem .25rem .1rem .25rem !important;
+    width: 100% !important;
+    font-size:.8rem !important;
 }
+    .chat-dropdown:hover {
+        color: white;
+    }
 
 .chat-hr {
     margin-top: .5rem;
     margin-bottom: .25rem;
     border: 0;
     border-top: 2px solid #5d5d70;
+}
+.dropdown-item {
+    font-size: .8rem;
 }
 
 .chat-input {
@@ -53,4 +76,93 @@
 
 .chat-sending-area{
     padding:.25rem;
+}
+
+.chatcustom input[type=text] {
+    border: 1px solid #5d5d70;
+    width: 100%;
+    padding-right: 25px;
+    background-color: #373747;
+    border-radius: 1rem;
+    height:26px;
+    max-width:none;
+    color:white;
+    padding-left:10px;
+}
+
+.chatcustom .input-group-prepend {
+    position: absolute;
+    right: 5px;
+    top: 3px;
+    bottom: 4px;
+    z-index: 9;
+}
+
+.chat-send-button {
+    width: 20px;
+    height: 20px;
+    padding: 0px 0px !important;
+    border-radius: 1rem!important;
+    text-align: center;
+    font-size: 12px;
+    line-height: 1.42857;
+    background-color: #45455b;
+    color:white;
+}
+.chat-send-button-purple {
+    background-color: purple;
+}
+
+.chat-button {
+    background-color: #45455b;
+    color:white;
+}
+
+    .chat-button:hover {
+        background-color: #5d5d70
+    }
+
+/* width */
+#divChatMessages::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+#divChatMessages::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+/* Handle */
+#divChatMessages::-webkit-scrollbar-thumb {
+    background: #888;
+}
+
+    /* Handle on hover */
+    #divChatMessages::-webkit-scrollbar-thumb:hover {
+        background: #555;
+    }
+
+.chat-notice::after {
+    content: "New";
+    background-color: red;
+    font-weight: bold;
+    border-radius: 1rem;
+    padding-right: 5px;
+    padding-left: 5px;
+    text-align: right;
+    float: right;
+    color:white;
+}
+
+.chat-notify-badge {
+    position: absolute;
+    right: -1px;
+    top: -8px;
+    background: red;
+    text-align: center;
+    border-radius: 1rem;
+    color: white;
+    padding: 1px 4px 1px 3px;
+    z-index: 5;
+    font-size: .7rem;
 }
