--- a/STSEval/app/static/app/content/chat.css
+++ b/STSEval/app/static/app/content/chat.css
@@ -1,3 +1,11 @@
+
+.chat-button-container {
+    position: fixed;
+    bottom: 3px;
+    right: 10px;
+    z-index: 104;
+}
+
 .chat-container {
     position: fixed;
     bottom: 3px;
@@ -11,6 +19,7 @@
     font-size: .8rem;
     width: 300px;
     border: 1px solid black;
+
 }
 
 .chat-header{
@@ -24,8 +33,7 @@
 .chat-messages{
     padding-left:.5rem;
     padding-right:.5rem;
-    min-height:200px;
-    max-height:200px;
+    height:200px;
     overflow-x:auto;
 }
 
@@ -165,4 +173,21 @@
     padding: 1px 4px 1px 3px;
     z-index: 5;
     font-size: .7rem;
+}
+
+@media only screen and (max-width:800px) {
+    .chat-container {
+        position: fixed;
+        top: 0px;
+        left: 0px;
+        height: 100%;
+        width: 100%;
+        z-index: 104;
+    }
+
+    .chat-box {
+        width:100%;
+        height:100%;
+        font-size:1rem;
+    }
 }
