escore fix.  favicon

--- a/STSEval/app/templates/app/d1.html
+++ b/STSEval/app/templates/app/d1.html
@@ -776,13 +776,13 @@
             document.getElementById('divTotalScore').innerHTML = (parseFloat(tot).toFixed(2));
         }
         else if (ScoringType == "JO8910") {
-            if (countedE > 1 && countedE <= 3)
+            /*if (countedE > 1 && countedE <= 3)
                 DeductFrom = 2;
             else if (countedE > 3 && countedE <= 5)
                 DeductFrom = 4;
             else if (countedE > 5 && countedE <= 7)
                 DeductFrom = 6;
-            else if (countedE > 7)
+            else if (countedE > 5)*/
                 DeductFrom = 10;
 
             if (ev == "V")
